argocd-ingress/articles.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: articles-deployment
  labels:
    app: articles
spec:
  replicas: 1
  selector:
    matchLabels:
      app: articles
  template:
    metadata:
      labels:
        app: articles
    spec:
      containers:
        - name: articles
          image: leonardtia/tia:articles
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            # limits:
            #   cpu: 200m
            #   memory: 300Mi
            requests:
              cpu: 200m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: articles-nodeport-service
  labels:
    app: articles
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  type: NodePort
  selector:
    app: articles
  ports:
    - port: 80
      targetPort: 80
